--- a/Lab2/magistrinis.tex
+++ b/Lab2/magistrinis.tex
@@ -53,7 +53,14 @@
 				Aukcioną laimėjęs žmogus perveda pinigus arba Bitcoin kripto valiutą į mūsų sistema, tuomet prekės pardavėjas išsiunčia prekę į mūsų biurą patikrinti ar prekė atitinka aprašymą. 
 				Biuro darbuotojui patvirtinus, kad prekė atitinka aprašymą sistema perveda pinigus pardavėjui jo pasirinktu būdu.
 
-			
+			\subsection{Konteksto požiūrio taško diagrama}
+
+				\begin{figure}[H]
+				\centering
+				\includegraphics[scale=0.9]{img/context}
+				\caption{Aukciono sistemos konteksto požiūrio taško diagrama} % Antraštė įterpiama po paveikslėlio
+				\label{img:text}
+				\end{figure}
 		\section{Funkcinis požiūrio taškas}
 		\section{Informacijos požiūrio taškas}
 		\section{Lygiagretumo požiūrio taškas}
