--- a/Lab2/magistrinis.tex
+++ b/Lab2/magistrinis.tex
@@ -250,7 +250,17 @@
 				\end{itemize}
 			
 		\section{Operatyvinis požiūrio taškas}
-		
+			\subsection{Diegimas ir migracija}
+				Diegimas vykdomas sukuriant atitinkamus mazgus debesijos aplinkoje.
+				Norint paleisti produkcijos Java projektus komandinėje eilutėje reikia įrašyti mvn clean install -Pbuild
+				Sistemos modulių veresijos kėlimui naudojama sudo apt-get install.
+				
+			\subsection{Configūracijos valdymas}
+				Vidurnakti yra sukuriamas naujas žurnalizavimo failas sekti sekančios dienos įvykiams ir sisteminėms klaidoms.
+				Vidurnakti atliekamas naujos versijos diegimas arba modulių bei bibliotekų update'inimas
+			\subsection{Sistemos administravimas}
+				Sistemą prižiūri vienas Fullstack programuotojas
+	
 
 
 \end{document}
